Fixed footer(negative margins set footer class), set page spacing with px, changes modified in css

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,73 +1,70 @@
-/* Colors for profile */
-
-
-/* Easy Reset */
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-footer {
-    position: fixed;
-    border: 2em;
-    border-color: rgb(51, 255, 0);
-    height: 10%;
-    width: 100%;
-    padding: 1%;
-    background-color: rgb(83, 83, 83);
-    text-align: center;
-    padding-top: 5em;
-}
-
-a {
-    list-style-type: none;
-    text-emphasis-color: none;
-    float: inline-end;
-    float: bottom;
-    margin-right: 20%;
-    padding-top: 25px;
-}
-
-.stickyHeader {
-    position: fixed;
-    background-color: rgb(0, 153, 255);
-    top: 0;
-    height: 15%;
-    width: 100%;
-    padding-bottom: 1%;
-}
-
-.contentBox {
-    position: fixed;
-    margin-left: 20%;
-    padding-top: 1%;
-    width: 190px;
-    height: 100px;
-}
-
-.contentBox2 {
-    float: left;
-    height: 200px;
-    width: 200px;
-    padding: 2px;
-}
-
-.navigationLinks {
-    display: inline-flex;
-    float: right;
-    padding-right: 25%;
-}
-
-.container {
-    width: 960px;
-    height: 90%;
-    margin-top: 10%;
-    margin-bottom: 2.5%;
-    margin-left: 20%;
-    margin-right: 20%;
-    background-color: bisque;
-    padding-top: 2%;
-}
-
-.class-1 {}
+    /* Colors for profile */
+    /* Easy Reset */
+    
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    a {
+        list-style-type: none;
+        text-emphasis-color: none;
+        float: inline-end;
+        float: bottom;
+        margin-right: 20%;
+        padding-top: 25px;
+    }
+    
+    .stickyHeader {
+        position: fixed;
+        background-color: rgb(0, 153, 255);
+        margin-bottom: -20px;
+        top: 0;
+        height: 100px;
+        width: 100%;
+        padding-bottom: 1%;
+    }
+    
+    .stickyFooter {
+        border-radius: 1%;
+        position: fixed;
+        height: 100px;
+        width: 100%;
+        border: 20px;
+        border-top-color: darkgreen;
+        margin-top: -100px;
+        background-color: rgb(83, 83, 83);
+        text-align: center;
+    }
+    
+    .contentBox {
+        position: fixed;
+        margin-left: 20%;
+        padding-top: 1%;
+        width: 190px;
+        height: 100px;
+    }
+    
+    .contentBox2 {
+        float: left;
+        height: 200px;
+        width: 200px;
+        padding: 2px;
+    }
+    
+    .navigationLinks {
+        display: inline-flex;
+        float: right;
+        padding-right: 25%;
+    }
+    
+    .container {
+        width: 960px;
+        min-height: 450px;
+        margin-top: 150px;
+        margin-bottom: 150px;
+        margin-left: 20%;
+        margin-right: 20%;
+        background-color: orange;
+        padding-top: 20px;
+    }
